prql/src/snapshots/prql__parser__test__parse_into_parse_tree-4.snap
---
source: src/parser.rs
expression: "parse_tree_of_str(r#\"    filter country = \"USA\"\"#, Rule::transformation)?"
---
[
    Pair {
        rule: transformation,
        span: Span {
            str: "    filter country = \"USA\"",
            start: 0,
            end: 26,
        },
        inner: [
            Pair {
                rule: ident,
                span: Span {
                    str: "filter",
                    start: 4,
                    end: 10,
                },
                inner: [],
            },
            Pair {
                rule: named_expr_simple,
                span: Span {
                    str: "country = \"USA\"",
                    start: 11,
                    end: 26,
                },
                inner: [
                    Pair {
                        rule: expr_simple,
                        span: Span {
                            str: "country = \"USA\"",
                            start: 11,
                            end: 26,
                        },
                        inner: [
                            Pair {
                                rule: ident,
                                span: Span {
                                    str: "country",
                                    start: 11,
                                    end: 18,
                                },
                                inner: [],
                            },
                            Pair {
                                rule: operator,
                                span: Span {
                                    str: "=",
                                    start: 19,
                                    end: 20,
                                },
                                inner: [],
                            },
                            Pair {
                                rule: string_literal,
                                span: Span {
                                    str: "\"USA\"",
                                    start: 21,
                                    end: 26,
                                },
                                inner: [
                                    Pair {
                                        rule: string,
                                        span: Span {
                                            str: "USA",
                                            start: 22,
                                            end: 25,
                                        },
                                        inner: [],
                                    },
                                ],
                            },
                        ],
                    },
                ],
            },
        ],
    },
]
