prql/src/snapshots/prql__parser__test__parse_list.snap
---
source: src/parser.rs
expression: "parse_tree_of_str(r#\"[1 + 1, 2]\"#, Rule::list)?"
---
[
    Pair {
        rule: list,
        span: Span {
            str: "[1 + 1, 2]",
            start: 0,
            end: 10,
        },
        inner: [
            Pair {
                rule: named_expr,
                span: Span {
                    str: "1 + 1",
                    start: 1,
                    end: 6,
                },
                inner: [
                    Pair {
                        rule: expr,
                        span: Span {
                            str: "1 + 1",
                            start: 1,
                            end: 6,
                        },
                        inner: [
                            Pair {
                                rule: number,
                                span: Span {
                                    str: "1",
                                    start: 1,
                                    end: 2,
                                },
                                inner: [],
                            },
                            Pair {
                                rule: operator,
                                span: Span {
                                    str: "+",
                                    start: 3,
                                    end: 4,
                                },
                                inner: [],
                            },
                            Pair {
                                rule: number,
                                span: Span {
                                    str: "1",
                                    start: 5,
                                    end: 6,
                                },
                                inner: [],
                            },
                        ],
                    },
                ],
            },
            Pair {
                rule: named_expr,
                span: Span {
                    str: "2",
                    start: 8,
                    end: 9,
                },
                inner: [
                    Pair {
                        rule: expr,
                        span: Span {
                            str: "2",
                            start: 8,
                            end: 9,
                        },
                        inner: [
                            Pair {
                                rule: number,
                                span: Span {
                                    str: "2",
                                    start: 8,
                                    end: 9,
                                },
                                inner: [],
                            },
                        ],
                    },
                ],
            },
        ],
    },
]
